<resources>
    <string name="app_name">myCare</string>
    <string name="cancel">Cancel</string>
    <string name="clean">Clean</string>
    <string name="submit">Submit</string>
    <string name="delete">Delete</string>
    <string name="deleteAll">Delete All</string>
    <string name="info">Information</string>
    <string name="dialog_text">This action will remove your entry!!!</string>
    <string name="no_entries">No entries</string>
    <string name="save_entry">Your entries are saved!!!</string>
    <string name="entry_deleted">Entry deleted</string>
    <string name="entries_deleted">Entry chain deleted</string>
    <string name="submit_something">Submission fields are empty!!!</string>
    <string name="submit_codes">Pick week days!!!</string>
    <string name="submit_hbts">Time zones are not selected yet!!!</string>
    <string name="title_text">Enter…</string>
    <string name="main_text">Product name</string>
    <string name="aux_text">Take from</string>
    <string name="detail_text">Used for treatment of</string>
    <string name="cb1">M</string>
    <string name="cb2">T</string>
    <string name="cb3">W</string>
    <string name="cb4">Th</string>
    <string name="cb5">F</string>
    <string name="cb6">Sa</string>
    <string name="cb7">Su</string>
    <string name="cb8">ED</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

<!-- Text_A : Early Morning  [00:00 - 6:00) -->
    <string name="text_a">Early Morning</string>
<!--  Text_B : Morning    [06:00 - 12:00) -->
    <string name="text_b">Morning</string>
<!--  Text_C : Afternoon  [12:00 - 18:00) -->
    <string name="text_c">Afternoon</string>
<!--  Text_D : Night      [18:00 - 24:00) -->
    <string name="text_d">Night</string>

    <string name="notificationText">No notifications yet!!!</string>
    <string name="widget_description">MyRe widget</string>
    <string name="channel_name">Notification_hd</string>
    <string name="channel_description">This channel is for notifications</string>
    <string name="info_confirm">Confirm submission</string>
    <string name="confirm">Confirm</string>
    <string name="action_confirm">Action confirmed!!!</string>
    <string name="no_events_info_text">Select a date range to add event</string>
    <string name="manual">Manual</string>
    <string name="auto">Auto</string>
    <string name="settings">Settings</string>
    <string name="settings_auto">Settings for auto</string>
    <string name="time_between">Time between periods (days)</string>
    <string name="max_time_days">Maximum time for calculations (months)</string>
    <string name="appVersion">Application version</string>
    <string name="hour">Hour</string>
    <string name="take">Take</string>
    <string name="now">Now</string>
    <string name="last_submission">Last Submission</string>
    <string name="time_zone">Time zones</string>
    <string name="ntf_msg">You must take your meds</string>
    <string name="data_saved">Data saved !!!</string>
    <string name="fert_msg">Available in auto function</string>
<!--Material Calendar Translation-->
    <string name="material_calendar_monday">M</string>
    <string name="material_calendar_tuesday">T</string>
    <string name="material_calendar_wednesday">W</string>
    <string name="material_calendar_thursday">T</string>
    <string name="material_calendar_friday">F</string>
    <string name="material_calendar_saturday">S</string>
    <string name="material_calendar_sunday">S</string>


    <array name="material_calendar_months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </array>

    <string name="material_calendar_today_button">Today</string>
    <string name="material_calendar_positive_button">OK</string>
    <string name="material_calendar_negative_button">Cancel</string>


</resources>